--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url    : "" # the base hostname & protocol for your site, e.g. http://example.co
 baseurl: "/agency-jekyll-theme-starter" # the subpath of your site, e.g. /blog
 
 title      : Quanto Gasta
-email      : your-email@example.com #this is also the email contact forms will go to
+#email      : your-email@example.com #this is also the email contact forms will go to
 description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
 author     : Your Name
 # logo:     #optional, defaults to site title
@@ -27,13 +27,13 @@ author     : Your Name
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
-analytics:
-  google: #Google Analytics tracking code here
+#analytics:
+  #google: #Google Analytics tracking code here
 
 #collections:
  # portfolio:
 
-markdown: kramdown
+##markdown: kramdown
 
 # Uncomment following line to use Formspree form ID based URL instead of email based URL
 # Details: https://help.formspree.io/hc/en-us/articles/360017735154-How-to-prevent-spam
